--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="msg-container hide">
+        <p id="msg">Winner</p>
+        <button id="new-button">New Game</button>
+    </div>
     <main>
         <h1>Tic Tac Toe</h1>
         <div class="container">
@@ -22,6 +26,7 @@
                 <button class="box"></button>
             </div>
         </div>
+        <button id="reset-button">Reset Game</button>
     </main>
     <script src="app.js"></script>
 </body>
